[f] #12400 fixed contextual menu z-index on ff

--- a/_editor.scss
+++ b/_editor.scss
@@ -122,6 +122,7 @@ body editor{
 		height: 300px;
         border: 1px solid #ddd !important;
 		top:0;
+		z-index: 1;
 		a{
 			img{
 				border: 1px dashed;
